overlapping of share icon resolved

--- a/css/besta.css
+++ b/css/besta.css
@@ -122,7 +122,7 @@ div {
   height: 10%;
   top: 110px;
   left: 60%;
-  margin: -100px 0 0 -150px;
+  margin: -100px 0 0 0px;
  
 }
 
